Fix labels not showing on album load

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ div.dateLabel {
     padding: 6px;
     position: absolute;
     text-align: right;
+    transition: 0.4s opacity;
     width: 100%;
     z-index: 20;
 }
